add latest code with commentary

--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta charset="UTF-8">
   <title>Password generator</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+
+  <!-- Style -->
+
   <style>
       h1{
           text-align:center
       }
-   
+
   </style>
  
 </head>
@@ -17,6 +20,8 @@
 <body>
 
 <h1>Password Generator</h1>
+
+<!-- jumbotron & form to collect user inputs & display password -->
 
 <div class="jumbotron">
     <h3> Generate a Password</h3>
@@ -30,10 +35,12 @@
     </div>
   </div>
        
-  <a class="btn btn-primary btn-lg" role="button" id="Mybutton">Learn more</a>
+  <a class="btn btn-primary btn-lg" role="button" id="Mybutton">Generate password</a>
   
 
   </div>
+
+  <!-- script reference -->
 
   <script src="script.js"></script>
     
